<resources>
    <string name="app_name">UiDesignAssignment</string>
    <string name="your_location">Your location</string>
    <string name="your_exact_location">Wertheimer, Illions</string>
    <string name="enter_receipt_number">Enter the receipt number…</string>
    <string name="tracking">Tracking</string>
    <string name="shipment_number">Shipment Number</string>
    <string name="shipment_history">Shipment History</string>
    <string name="shipment_number_fig">NEJ20089934122231</string>
    <string name="sender">Sender</string>
    <string name="sender_location">Atlanta, 5243</string>
    <string name="sender_location_edit">Sender location</string>
    <string name="time">Time</string>
    <string name="time_estimate">2 day - 3 days</string>
    <string name="receiver">Receiver</string>
    <string name="receiver_location">Chicago, 6342</string>
    <string name="receiver_location_edit">Receiver location</string>
    <string name="approx_weight_edit">Approx weight</string>
    <string name="status">Status</string>
    <string name="status_value">Waiting to collect</string>
    <string name="add_stop">Add Stop</string>
    <string name="available_vehicles">Available vehicles</string>
    <string name="in_progress">in-progress</string>
    <string name="pending">pending</string>
    <string name="loading">loading</string>
    <string name="arriving_today">Arriving today!</string>
    <string name="arriving_today_details">Your delivery, #NEJ20089934122231 from Atlanta, is arriving today!</string>
    <string name="calculate">Calculate</string>
    <string name="shipment">Shipment</string>
    <string name="shipments">Shipments</string>
    <string name="destination">Destination</string>
    <string name="packaging">Packaging</string>
    <string name="packaging_sub">What are you sending?</string>
    <string name="box">Box</string>
    <string name="categories">Categories</string>
    <string name="line">|</string>
    <string name="documents">Documents</string>
    <string name="glass">Glass</string>
    <string name="liquid">Liquid</string>
    <string name="food">Food</string>
    <string name="electronic">Electronic</string>
    <string name="product">Product</string>
    <string name="other">Others</string>
    <string name="zero">0</string>
    <string name="usd_symbol">\u0024</string>
    <string name="usd">USD</string>
    <string name="fourteen_usd">\u00241400 USD</string>
    <string name="six_fifty_usd">\u0024650 USD</string>
    <string name="two_thirty_usd">\u0024230 USD</string>
    <string name="three_seventy_usd">\u0024370 USD</string>
    <string name="shipment_date">Sep 20, 2023</string>
    <string name="search_item_title_1">Macbook pro M2</string>
    <string name="search_item_tracking_number_1">#NEJ20089934122231</string>
    <string name="search_item_sender_location_1">Paris</string>
    <string name="search_item_receiver_location_1">Morocco</string>
    <string name="search_item_title_2">Tapered-fit jeans AW</string>
    <string name="search_item_tracking_number_2">#NEJ20089934135492</string>
    <string name="search_item_sender_location_2">Colombia</string>
    <string name="search_item_receiver_location_2">Paris</string>
    <string name="search_item_title_3">Summer linen jacket</string>
    <string name="search_item_tracking_number_3">#NEJ20089934100886</string>
    <string name="search_item_sender_location_3">Barcelona</string>
    <string name="search_item_receiver_location_3">Paris</string>
    <string name="search_item_title_4">Office setup desk</string>
    <string name="search_item_tracking_number_4">#NEJ20089934156683</string>
    <string name="search_item_sender_location_4">France</string>
    <string name="search_item_receiver_location_4">Germany</string>
    <string name="search_item_title_5">Slim fit jeans AW</string>
    <string name="search_item_tracking_number_5">#NEJ20089934145322</string>
    <string name="search_item_sender_location_5">Bogota</string>
    <string name="search_item_receiver_location_5">Dhaka</string>
    <string name="freight_type_1">Ocean freight</string>
    <string name="freight_sub_1">International</string>
    <string name="freight_type_2">Cargo freight</string>
    <string name="freight_sub_2">Reliable</string>
    <string name="freight_type_3">Air freight</string>
    <string name="freight_sub_3">International</string>
    <string name="freight_type_4">Train freight</string>
    <string name="freight_sub_4">Multi Service</string>
    <string name="freight_type_5">Drone freight</string>
    <string name="freight_sub_5">Live</string>
    <string name="freight_type_6">Instant freight</string>
    <string name="freight_sub_6">Local</string>
    <string name="freight_type_7">Road freight</string>
    <string name="freight_sub_7">Local</string>
    <string name="total_estimated_amount">Total Estimated Amount</string>
    <string name="total_estimated_amount_sub">This amount is estimated this will vary\nif you change your location or weight</string>
    <string name="back_home">Back to home</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="in_progress_c">In progress</string>
    <string name="pending_orders">Pending Order</string>
    <string name="cancelled">Cancelled</string>
</resources>