<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@id/actionTabs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />



        <com.google.android.material.tabs.TabLayout
            android:id="@+id/actionTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorGravity="top"
            app:tabIndicatorColor="@color/color_primary"
            app:tabIndicatorAnimationMode="elastic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:tabSelectedTextColor="@color/color_primary"
            app:tabTextColor="@color/search_text_color"
            app:tabRippleColor="@color/transparent"
            app:tabTextAppearance="@style/Widget.CustomTabLayout">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:icon="@drawable/home_icon"
                />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:icon="@drawable/calculate_icon"
                />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/shipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipment"
                android:icon="@drawable/shipment_outline"
                />
            <com.google.android.material.tabs.TabItem
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:icon="@drawable/profile_icon"
                />


        </com.google.android.material.tabs.TabLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
